# voidstorm

./: CMakeLists.txt  README.md  build.bat  instructions.txt
CMake/: FindDCFX.cmake  FindDLMalloc.cmake  FindLUA.cmake  FindSDL2.cmake
data/fonts/: Arial.spritefont
data/scripts/: boulder.lua  class.lua  debug.lua  effect.lua  effects.lua  enemy.lua  entity_types.lua  fps.lua  map.lua  particles.lua  player.lua  ray.lua  sprite.lua  test.lua  voidstorm.lua  voidstorm_def.lua  voidstorm_test.lua  world.lua  worm.lua
data/shaders/: blur_horizontal.frag  blur_vertical.frag  exposure.frag  fullscreenquad.frag  fullscreenquad.vert  line.frag  line.vert  sprite.frag  sprite.vert
data/textures/: boulder.dds  diamond.dds  enemy.dds  player.dds  player_dot.dds  test.dds  wheel.dds
include/TINYSTL/: buffer.h  hash_base.h  traits.h  unordered_set.h
include/dcfx/: config.h  context.h  d3d12_context.h  dcfx_helper.h  ddraw.h  defines.h  image_parser.h  opengl_context.h  opengl_wgl.h  vertexdecl.h
include/dcutil/: aabb.h  allocator.h  bytebuffer.h  color.h  dcutil_helper.h  frustum.h  handleallocator.h  hash.h  macros.h  memoryreader.h  orientation.h  pool.h  print.h  semaphore.h  sort.h  stack.h
include/dlmalloc/: dlmalloc.h
lib/x64/: SDL2.lib  SDL2main.lib  dcfx.lib  dcutil.lib  dlmalloc.lib  lgeutil.lib  lua51.lib  render.lib
lib/x86/: SDL2.lib  SDL2main.lib  dcfx.lib  dcutil.lib  dlmalloc.lib  luajit-5.1.lib
raw/: Thumbs.db  star.psd
tools/: makefont.bat
voidstorm/: CMakeLists.txt
voidstorm/code/: voidstorm.cpp  voidstorm.h  voidstorm_alloc.cpp  voidstorm_alloc.h  voidstorm_api.cpp  voidstorm_collision.cpp  voidstorm_collision.h  voidstorm_component.cpp  voidstorm_component.h  voidstorm_config.h  voidstorm_entity.cpp  voidstorm_entity.h  voidstorm_input.h  voidstorm_linerender.cpp  voidstorm_linerender.h  voidstorm_math.h  voidstorm_misc.h  voidstorm_particle.cpp  voidstorm_particle.h  voidstorm_physics.cpp  voidstorm_physics.h  voidstorm_platform.h  voidstorm_render.cpp  voidstorm_render.h  voidstorm_resources.cpp  voidstorm_resources.h  voidstorm_shape.cpp  voidstorm_shape.h  voidstorm_spritebatch.cpp  voidstorm_spritebatch.h
voidstorm/code/linux/: voidstorm_linux.cpp
voidstorm/code/windows/: voidstorm_win32.cpp  voidstorm_win32.h
